// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render tooltip with header 1`] = `
<Fragment>
  <div
    className="Tooltip-Link"
  >
    <link
      key="link"
      onClick={[Function]}
      tabIndex="0"
      theme="ghost"
    >
      <icon
        glyph="info-circle"
        key="icon"
      />
    </link>
  </div>
  <SimpleComposeWrapper [theme:normal],[view:default]
    anchor={
      Object {
        "current": null,
      }
    }
    className="Tooltip-Popup"
    target="anchor"
    theme="normal"
    view="default"
    visible={false}
  >
    <h2>
      Header
    </h2>
  </SimpleComposeWrapper [theme:normal],[view:default]>
</Fragment>
`;

exports[`Should render tooltip with text 1`] = `
<Fragment>
  <div
    className="Tooltip-Link"
  >
    <link
      key="link"
      onClick={[Function]}
      tabIndex="0"
      theme="ghost"
    >
      <icon
        glyph="info-circle"
        key="icon"
      />
    </link>
  </div>
  <SimpleComposeWrapper [theme:normal],[view:default]
    anchor={
      Object {
        "current": null,
      }
    }
    className="Tooltip-Popup"
    target="anchor"
    theme="normal"
    view="default"
    visible={false}
  >
    Text
  </SimpleComposeWrapper [theme:normal],[view:default]>
</Fragment>
`;
